k8s-pac-demo/kyverno/pod-security-testing.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-security-should-fail
  namespace: demo-pac
  labels:
    app: pod-security-should-fail
    owner: demo
spec:
  # no seccompProfile (or Unconfined)
  containers:
    - name: app
      image: busybox:1.36
      command: ["sh", "-c", "id; sleep 3600"]
      securityContext:
        runAsNonRoot: false
        allowPrivilegeEscalation: true
        readOnlyRootFilesystem: false
        # no capabilities.drop: ["ALL"]
      resources:
        requests:
          cpu: "50m"
          memory: "64Mi"
        limits:
          cpu: "200m"
          memory: "256Mi"
