k8s-pac-demo/kyverno/restrict-lb-service-testing.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-should-fail
  namespace: demo-pac
  labels:
    app: lb-should-fail
    owner: demo
spec:
  type: LoadBalancer
  selector:
    app: foo
  ports:
    - name: http
      port: 80
      targetPort: 80
